--- a/lab_3/lab_3.qmd
+++ b/lab_3/lab_3.qmd
@@ -45,204 +45,122 @@ format:
 ### Шаг 1
 
 Установим пакет nycflights13.
-```
-> install.packages("nycflights13")
-WARNING: Rtools is required to build R packages but is not currently installed. Please download and install the appropriate version of Rtools before proceeding:
 
-https://cran.rstudio.com/bin/windows/Rtools/
-Устанавливаю пакет в ‘C:/Users/Ivan/AppData/Local/R/win-library/4.5’
-(потому что ‘lib’ не определено)
-пробую URL 'https://cran.rstudio.com/bin/windows/contrib/4.5/nycflights13_1.0.2.zip'
-Content type 'application/zip' length 4511548 bytes (4.3 MB)
-downloaded 4.3 MB
-
-пакет ‘nycflights13’ успешно распакован, MD5-суммы проверены
-
-Скачанные бинарные пакеты находятся в
-	C:\Users\Ivan\AppData\Local\Temp\RtmpKie1OU\downloaded_packages
-```
 Подключим необходимые библиотеки
-```
-> library(nycflights13)
-> library(dplyr)
-
-Присоединяю пакет: ‘dplyr’
-
-Следующие объекты скрыты от ‘package:stats’:
-
-    filter, lag
-
-Следующие объекты скрыты от ‘package:base’:
-
-    intersect, setdiff, setequal, union
+```{r}
+library(nycflights13)
+library(dplyr)
 ```
 Сколько встроенных в пакет nycflights13 датафреймов?
-```
-> nrow(data(package = "nycflights13")$results)
-[1] 5
+```{r}
+nrow(data(package = "nycflights13")$results)
 ```
 Сколько строк в каждом датафрейме?
-```
-> sapply(
-+     list(
-+         airlines = airlines,
-+         airports = airports,
-+         flights  = flights,
-+         planes   = planes,
-+         weather  = weather
-+     ),
-+     nrow
-+ )
-airlines airports  flights   planes  weather 
-      16     1458   336776     3322    26115 
+```{r}
+sapply(
+list(
+airlines = airlines,
+airports = airports,
+flights  = flights,
+planes   = planes,
+weather  = weather
+),
+nrow
+)
 ```
 Сколько столбцов в каждом датафрейме?
-```
-> sapply(
-+     list(
-+         airlines = airlines,
-+         airports = airports,
-+         flights  = flights,
-+         planes   = planes,
-+         weather  = weather
-+     ),
-+     ncol
-+ )
-airlines airports  flights   planes  weather 
-       2        8       19        9       15 
+```{r}
+sapply(
+list(
+airlines = airlines,
+airports = airports,
+flights  = flights,
+planes   = planes,
+weather  = weather
+),
+ncol
+)
 ```
 Как просмотреть примерный вид датафрейма?
-```
-> airlines %>%
-+     as_tibble() %>%
-+     head()
-# A tibble: 6 × 2
-  carrier name                    
-  <chr>   <chr>                   
-1 9E      Endeavor Air Inc.       
-2 AA      American Airlines Inc.  
-3 AS      Alaska Airlines Inc.    
-4 B6      JetBlue Airways         
-5 DL      Delta Air Lines Inc.    
-6 EV      ExpressJet Airlines Inc.
+```{r}
+airlines %>%
+as_tibble() %>%
+head()
+
 ```
 Сколько компаний-перевозчиков (carrier) учитывают эти наборы данных (представлено в наборах данных)?
-```
-> airlines %>%
-+     summarise(unique_carriers = n_distinct(carrier)) %>%
-+     pull(unique_carriers)
-[1] 16
+```{r}
+airlines %>%
+summarise(unique_carriers = n_distinct(carrier)) %>%
+pull(unique_carriers)
 ```
 Сколько рейсов принял аэропорт John F Kennedy Intl в мае?
-```
-> flights %>%
-+     filter(dest == "JFK", month == 5) %>%
-+     tally() %>%
-+     pull(n)
-[1] 0
+```{r}
+flights %>%
+filter(dest == "JFK", month == 5) %>%
+tally() %>%
+pull(n)
 ```
 Какой самый северный аэропорт?
-```
-> airports %>%
-+     filter(!is.na(lat)) %>%
-+     slice_max(lat, n = 1, with_ties = FALSE) %>%
-+     select(name, lat)
-# A tibble: 1 × 2
-  name                      lat
-  <chr>                   <dbl>
-1 Dillant Hopkins Airport  72.3
+```{r}
+airports %>%
+filter(!is.na(lat)) %>%
+slice_max(lat, n = 1, with_ties = FALSE) %>%
+select(name, lat)
+
 ```
 
 Какой аэропорт самый высокогорный (находится выше всех над уровнем моря)?
-```
-> airports %>%
-+     filter(!is.na(alt)) %>%
-+     slice_max(alt, n = 1, with_ties = FALSE) %>%
-+     select(name, alt)
-# A tibble: 1 × 2
-  name        alt
-  <chr>     <dbl>
-1 Telluride  9078
+```{r}
+airports %>%
+filter(!is.na(alt)) %>%
+slice_max(alt, n = 1, with_ties = FALSE) %>%
+select(name, alt)
 ```
 
 Какие бортовые номера у самых старых самолетов?
-```
-> planes %>%
-+     filter(!is.na(year)) %>%
-+     slice_min(year, n = 10, with_ties = TRUE) %>%
-+     select(year, tailnum)
-# A tibble: 10 × 2
-    year tailnum
-   <int> <chr>  
- 1  1956 N381AA 
- 2  1959 N201AA 
- 3  1959 N567AA 
- 4  1963 N378AA 
- 5  1963 N575AA 
- 6  1965 N14629 
- 7  1967 N615AA 
- 8  1968 N425AA 
- 9  1972 N383AA 
-10  1973 N364AA 
+```{r}
+planes %>%
+filter(!is.na(year)) %>%
+slice_min(year, n = 10, with_ties = TRUE) %>%
+select(year, tailnum)
+
 ```
 Какая средняя температура воздуха была в сентябре в аэропорту John FKennedy Intl (в градусах Цельсия).
-```
-> weather %>%
-+     filter(origin == "JFK", month == 9) %>%
-+     summarise(
-+         mean_temp_c = (mean(temp, na.rm = TRUE) - 32) * 5 / 9
-+     ) %>%
-+     pull(mean_temp_c)
-[1] 19.38764
+```{r}
+weather %>%
+filter(origin == "JFK", month == 9) %>%
+summarise(
+mean_temp_c = (mean(temp, na.rm = TRUE) - 32) * 5 / 9
+) %>%
+pull(mean_temp_c)
 ```
 Самолеты какой авиакомпании совершили больше всего вылетов в июне?
-```
-> flights %>%
-+     filter(month == 6) %>%
-+     group_by(carrier) %>%
-+     summarise(flights_count = n(), .groups = "drop") %>%
-+     arrange(desc(flights_count)) %>%
-+     slice_head(n = 1) %>%
-+     left_join(airlines, by = "carrier") %>%
-+     select(name, flights_count)
-# A tibble: 1 × 2
-  name                  flights_count
-  <chr>                         <int>
-1 United Air Lines Inc.          4975
+```{r}
+flights %>%
+filter(month == 6) %>%
+group_by(carrier) %>%
+summarise(flights_count = n(), .groups = "drop") %>%
+arrange(desc(flights_count)) %>%
+slice_head(n = 1) %>%
+left_join(airlines, by = "carrier") %>%
+select(name, flights_count)
 ```
 Самолеты какой авиакомпании задерживались чаще других в 2013 году?
-```
-> flights %>%
-+     filter(!is.na(dep_delay), !is.na(arr_delay)) %>%
-+     mutate(delayed = dep_delay > 0 | arr_delay > 0) %>%
-+     group_by(carrier) %>%
-+     summarise(
-+         delayed_flights = sum(delayed),
-+         total_flights   = n(),
-+         delay_ratio     = delayed_flights / total_flights,
-+         .groups = "drop"
-+     ) %>%
-+     arrange(desc(delay_ratio)) %>%
-+     left_join(airlines, by = "carrier")
-# A tibble: 16 × 5
-   carrier delayed_flights total_flights delay_ratio name                       
-   <chr>             <int>         <int>       <dbl> <chr>                      
- 1 F9                  476           681       0.699 Frontier Airlines Inc.     
- 2 FL                 2156          3175       0.679 AirTran Airways Corporation
- 3 WN                 7546         12044       0.627 Southwest Airlines Co.     
- 4 UA                32741         57782       0.567 United Air Lines Inc.      
- 5 EV                28277         51108       0.553 ExpressJet Airlines Inc.   
- 6 YV                  292           544       0.537 Mesa Airlines Inc.         
- 7 VX                 2745          5116       0.537 Virgin America             
- 8 B6                28545         54049       0.528 JetBlue Airways            
- 9 MQ                12715         25037       0.508 Envoy Air                  
-10 9E                 8562         17294       0.495 Endeavor Air Inc.          
-11 DL                21473         47658       0.451 Delta Air Lines Inc.       
-12 AA                14143         31947       0.443 American Airlines Inc.     
-13 US                 8346         19831       0.421 US Airways Inc.            
-14 AS                  289           709       0.408 Alaska Airlines Inc.       
-15 OO                   11            29       0.379 SkyWest Airlines Inc.      
-16 HA                  129           342       0.377 Hawaiian Airlines Inc.     
+```{r}
+flights %>%
+filter(!is.na(dep_delay), !is.na(arr_delay)) %>%
+mutate(delayed = dep_delay > 0 | arr_delay > 0) %>%
+group_by(carrier) %>%
+summarise(
+delayed_flights = sum(delayed),
+total_flights   = n(),
+delay_ratio     = delayed_flights / total_flights,
+.groups = "drop"
+) %>%
+arrange(desc(delay_ratio)) %>%
+left_join(airlines, by = "carrier")
+
 ```
 ### Шаг 2
 #### Оценка результатов
